feat(14): change the weather box

--- a/index.html
+++ b/index.html
@@ -2,10 +2,38 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/src/styles.css" rel="stylesheet">
-    <title>Vite + React + TS</title>
+    <link href="/src/styles.css" rel="stylesheet" />
+    <title>Life Rank | Find the Best Cities for Remote Work & Travel</title>
+    <title>Life Rank – Compare Cities Worldwide for Cost, Safety & Lifestyle</title>
+    <meta
+      name="description"
+      content="Discover the best cities to live, work, or travel with Life Rank. Compare cost of living, safety, healthcare, weather, and more—worldwide."
+    />
+
+    <meta
+      property="og:title"
+      content="Life Rank – Compare Cities Worldwide for Cost, Safety & Lifestyle"
+    />
+    <meta
+      property="og:description"
+      content="Discover the best cities to live, work, or travel with Life Rank. Compare cost of living, safety, healthcare, weather, and more—worldwide."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://theliferank.com" />
+    <meta property="og:image" content="https://yourdomain.com/og-image.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Life Rank – Compare Cities Worldwide for Cost, Safety & Lifestyle"
+    />
+    <meta
+      name="twitter:description"
+      content="Discover the best cities to live, work, or travel with Life Rank. Compare cost of living, safety, healthcare, weather, and more—worldwide."
+    />
+    <meta name="twitter:image" content="https://yourdomain.com/twitter-image.png" />
   </head>
   <body>
     <div id="root"></div>
