feat(16): landing page word changes

--- a/index.html
+++ b/index.html
@@ -5,35 +5,43 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/styles.css" rel="stylesheet" />
-    <title>Life Rank | Find the Best Cities for Remote Work & Travel</title>
-    <title>Life Rank – Compare Cities Worldwide for Cost, Safety & Lifestyle</title>
+    <title>Life Rank – Discover Peaceful, Sunny Cities to Live and Thrive</title>
     <meta
       name="description"
-      content="Discover the best cities to live, work, or travel with Life Rank. Compare cost of living, safety, healthcare, weather, and more—worldwide."
+      content="Tired of stress and gray skies? Life Rank helps you find affordable, peaceful cities in Southern Europe with sun, safety, and lifestyle that fits you."
     />
 
+    <!-- Open Graph Tags -->
     <meta
       property="og:title"
-      content="Life Rank – Compare Cities Worldwide for Cost, Safety & Lifestyle"
+      content="Life Rank – Discover Peaceful, Sunny Cities to Live and Thrive"
     />
     <meta
       property="og:description"
-      content="Discover the best cities to live, work, or travel with Life Rank. Compare cost of living, safety, healthcare, weather, and more—worldwide."
+      content="Find your place in the world. Explore handpicked European cities known for their sun, safety, and relaxed lifestyle."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://theliferank.com" />
-    <meta property="og:image" content="https://yourdomain.com/og-image.png" />
+    <meta property="og:image" content="https://theliferank.com/og-cover.png" />
 
+    <!-- Twitter Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Life Rank – Compare Cities Worldwide for Cost, Safety & Lifestyle"
+      content="Life Rank – Discover Peaceful, Sunny Cities to Live and Thrive"
     />
     <meta
       name="twitter:description"
-      content="Discover the best cities to live, work, or travel with Life Rank. Compare cost of living, safety, healthcare, weather, and more—worldwide."
+      content="Explore Europe's most livable coastal towns — slow, sunny, and safe. Find the lifestyle you've been dreaming about."
     />
-    <meta name="twitter:image" content="https://yourdomain.com/twitter-image.png" />
+    <meta name="twitter:image" content="https://theliferank.com/twitter-cover.png" />
+    <!-- Cloudflare Web Analytics -->
+    <script
+      defer
+      src="https://static.cloudflareinsights.com/beacon.min.js"
+      data-cf-beacon='{"token": "19fe1a98f1ba48ceacfd08292cffd72b"}'
+    ></script>
+    <!-- End Cloudflare Web Analytics -->
   </head>
   <body>
     <div id="root"></div>
