feat(23): test 2 ga

--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/styles.css" rel="stylesheet" />
-    <title>Life Rank – Discover Peaceful, Sunny Cities to Live and Thrive</title>
+    <title>Life Rank – Discover Relaxed European Cities where you can  Live and Thrive</title>
     <meta
       name="description"
-      content="Tired of stress and gray skies? Life Rank helps you find affordable, peaceful cities in Southern Europe with sun, safety, and lifestyle that fits you."
+      content="Tired of stress and gray skies? Life Rank helps you find affordable, peaceful cities in Europe with ease, safety, and lifestyle that fits you."
     />
 
     <!-- Open Graph Tags -->
     <meta
       property="og:title"
-      content="Life Rank – Discover Peaceful, Sunny Cities to Live and Thrive"
+      content="Life Rank – Discover Relaxed European Cities where you can  Live and Thrive"
     />
     <meta
       property="og:description"
-      content="Find your place in the world. Explore handpicked European cities known for their sun, safety, and relaxed lifestyle."
+      content="Find your place in the world. Explore handpicked European cities known for their ease, safety, and relaxed lifestyle."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://theliferank.com" />
@@ -28,11 +28,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Life Rank – Discover Peaceful, Sunny Cities to Live and Thrive"
+      content="Life Rank – Discover Relaxed European Cities where you can  Live and Thrive"
     />
     <meta
       name="twitter:description"
-      content="Explore Europe's most livable coastal towns — slow, sunny, and safe. Find the lifestyle you've been dreaming about."
+      content="Explore Europe's most livable towns — relaxed, safe, and on your budget. Find the lifestyle you've been dreaming about."
     />
     <meta name="twitter:image" content="https://theliferank.com/twitter-cover.png" />
     <!-- Cloudflare Web Analytics -->
