feat(26): add seo resources

--- a/index.html
+++ b/index.html
@@ -5,36 +5,33 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/styles.css" rel="stylesheet" />
-    <title>Life Rank – Discover Relaxed European Cities where you can  Live and Thrive</title>
+    <title>Affordable & Peaceful Places to Live in Europe | LifeRank</title>
     <meta
       name="description"
-      content="Tired of stress and gray skies? Life Rank helps you find affordable, peaceful cities in Europe with ease, safety, and lifestyle that fits you."
+      content="Explore calm and budget-friendly towns and cities in Europe. Ideal for FIRE, remote work, or early retirement. Discover your next home today."
     />
 
     <!-- Open Graph Tags -->
-    <meta
-      property="og:title"
-      content="Life Rank – Discover Relaxed European Cities where you can  Live and Thrive"
-    />
+    <meta property="og:title" content="Find Peaceful & Affordable Places to Live in Europe" />
     <meta
       property="og:description"
-      content="Find your place in the world. Explore handpicked European cities known for their ease, safety, and relaxed lifestyle."
+      content="Explore budget-friendly towns across Europe with lifestyle insights, safety, and cost of living data."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://theliferank.com" />
-    <meta property="og:image" content="https://theliferank.com/og-cover.png" />
+    <meta property="og:image" content="https://theliferank.com/og.jpg" />
 
     <!-- Twitter Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Life Rank – Discover Relaxed European Cities where you can  Live and Thrive"
+      content="Find Peaceful & Affordable Places to Live in Europe"
     />
     <meta
       name="twitter:description"
-      content="Explore Europe's most livable towns — relaxed, safe, and on your budget. Find the lifestyle you've been dreaming about."
+      content="Explore budget-friendly towns across Europe with lifestyle insights, safety, and cost of living data."
     />
-    <meta name="twitter:image" content="https://theliferank.com/twitter-cover.png" />
+    <meta name="twitter:image" content="https://theliferank.com/og.jpg" />
     <!-- Cloudflare Web Analytics -->
     <script
       defer
